test/fail/capture_func01.v3
//@execute 0=11
def main(a: int) -> int {
	var f = fun => (a, a);
	var g = fun => (f, f);
	var h = fun => (g, g); // TODO: classfile name too long

	var ht = h(), gt0 = ht.0(), gt1 = ht.1();
	var gt00 = gt0.0(), gt01 = gt0.1();
	var gt10 = gt1.0(), gt11 = gt1.1();

	if (gt00 != gt01) return -1;
	if (gt00 != gt10) return -2;
	if (gt10 != gt11) return -11;

	return 11;
}